tests/reference/asr-index_non_integer_substring1-941c9ea.stderr
semantic error: Substring start index must be of type integer
 --> tests/errors/index_non_integer_substring1.f90:4:16
  |
4 |     print *, x(1.1:2)
  |                ^^^ 
